Prevent ordered list numbers from being clipped for leading-zero styles and lists with a start attribute, including on info-details pages

--- a/docroot/themes/custom/mass_theme/overrides/css/ckeditor.css
+++ b/docroot/themes/custom/mass_theme/overrides/css/ckeditor.css
@@ -62,7 +62,13 @@
 
 .ck-content ol {
   margin-bottom: 1em;
-  padding-left: 20px;
+  padding-left: 25px;
+  list-style-position: outside;
+}
+
+.ck-content ol.list-style-decimal-leading-zero,
+.ck-content ol[start] {
+  padding-left: 2.5em;
 }
 
 .ck-content ol:last-child {
